[package]
name = "twk"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/tascord/wiki"
description = "Mini CLI/TUI wiki for remembering stuff"

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.29.0"
dirs = "6.0.0"
nucleo-matcher = "0.3.1"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
regex = "1.11.0"

[[bin]]
name = "wk"
path = "src/main.rs"
